lib/display_require: reset hdcp on all connectors

At the start of every test, reset HDCP state to UNDESIRED on all
connectors, so that we will not have any hdcp related noises in
the subsequent tests.

v2:
  igt_output_set_prop_enum is used.
  Documentation of display_reset is updated.

Signed-off-by: Ramalingam C <ramalingam.c@intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111390
Reviewed-by: Simon Ser <simon.ser@intel.com>
Reviewed-by: Petri Latvala <petri.latvala@intel.com>